apps/base/xm-spotify-sync/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xm-spotify-sync
  labels:
    app.kubernetes.io/name: xm-spotify-sync
    app.kubernetes.io/component: music-sync
